--- a/index2.html
+++ b/index2.html
@@ -66,11 +66,13 @@
         var externo = document.querySelector("#externo");
         var medio = document.querySelector("#medio");
         var interno = document.querySelector("#interno");
+        var check = document.querySelector("input");
 
         window.addEventListener("load", (e) => {
-            propagation();
+            propagation(check);
             resetPropagation();
             getColor();
+            document.body.style.backgroundColor = "#232323"
         });
 
         window.addEventListener("resize", () => {
@@ -79,8 +81,7 @@
         })
 
         externo.addEventListener("click", (e) => {
-            //console.log("Click en externo");
-            if (propagation()) {
+            if (propagation(check)) {
                 externo.style.backgroundColor = getColor();
             } else {
                 e.stopPropagation();
@@ -89,8 +90,7 @@
         });
 
         medio.addEventListener("click", (e) => {
-            //console.log("Click en medio");
-            if (propagation()) {
+            if (propagation(check)) {
                 medio.style.backgroundColor = getColor();
             } else {
                 e.stopPropagation();
@@ -99,8 +99,7 @@
         });
 
         interno.addEventListener("click", (e) => {
-            //console.log("Click en interno");
-            if (propagation()) {
+            if (propagation(check)) {
                 interno.style.backgroundColor = getColor();
             } else {
                 e.stopPropagation();
@@ -108,31 +107,15 @@
             }
         });
 
-
-        var check = document.querySelector("input");
-
-        function propagation() {
-
-            check.addEventListener("click", (e) => {
-                if (check.checked) {
-                    //console.log("Cheked");
-                } else {
-                    //console.log("Unchecked");
-                }
-
-                //console.log(check.checked);
-            });
-
-            return check.checked;
+        function propagation(param) {
+            return param.checked
         }
 
         function resetPropagation() {
             document.addEventListener("click", (e) => {
-                //console.log(e)
                 if (e.target.innerHTML == "Reset") {
-                    //console.log("Reseteado");
                     check.checked = false;
-                    //console.log(check.checked);
+                    console.log(check.checked);
                     externo.style.backgroundColor = "white"
                     medio.style.backgroundColor = "white"
                     interno.style.backgroundColor = "white"
@@ -140,17 +123,8 @@
             });
         }
 
-        //console.log(getColor());
-
         function getColor() {
-            let select = document.querySelector("select");
-            let color = select.value;
-
-            select.addEventListener("change", () => {
-                color = select.options[select.selectedIndex].value;
-                //console.log(color);
-            });
-
+            let color = document.querySelector("select").value
             return color;
         }
     </script>
