Refactor index2.html

--- a/index2_1.html
+++ b/index2_1.html
@@ -113,7 +113,7 @@
             });
         }
 
-        //Obtiene el calor según el Dropdown
+        //Obtiene el color según el Dropdown
         function getColor() {
             let color = document.querySelector("select").value
             return color;
