--- a/index2_1.html
+++ b/index2_1.html
@@ -70,7 +70,7 @@
 
         // Setea el color de fondo y carga la funcion resetPropagation()
         window.addEventListener("load", () => {
-            //resetPropagation();
+            resetPropagation();
             document.body.style.backgroundColor = "#232323"
         });
 
