--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             height: 50vh;
             padding: 10px;
         }
+        
+        main h2 {
+            color: white;
+        }
     </style>
 </head>
 
@@ -36,14 +40,7 @@
         var colorPage = ['red', 'green', 'blue', 'black', 'yellow', 'purple', 'orange']
         var colorState = 0
 
-        console.log("Initialized color:  " + colorState)
-
-        window.addEventListener("load", () => {
-            getColor(colorPage)
-        })
-
         document.addEventListener("click", (e) => {
-
             let btn = e.target.innerHTML
 
             if (btn == "Cambiar Color -") {
@@ -51,14 +48,11 @@
                 if (colorState < 0) colorState = (colorPage.length - 1)
                 getColor(colorPage)
                 console.log("Color: " + colorState)
-
-
             } else if (btn == "Cambiar Color +") {
                 colorState++
                 if (colorState > (colorPage.length - 1)) colorState = 0
                 getColor(colorPage)
                 console.log("Color: " + colorState)
-
             } else {
                 return false;
 
@@ -66,9 +60,8 @@
         })
 
         function getColor(array2) {
-            document.body.style.backgroundColor = array2[colorState]
+            document.querySelector("main").style.backgroundColor = array2[colorState]
             document.querySelectorAll("h2")[1].innerText = "Color es: " + array2[colorState]
-
         }
     </script>
 
