--- a/Ejercicio Nº 2.html
+++ b/Ejercicio Nº 2.html
@@ -98,7 +98,7 @@
                     check.checked = false;
                     var div = document.querySelectorAll("div")
                     div.forEach(index => index.style.backgroundColor = "white")
-                    let reset1 = document.querySelector("select").selectedIndex = 0
+                    document.querySelector("select").selectedIndex = 0
                 }
             })
         }
