--- a/Ejercicio 2B/Ejercicio2B.html
+++ b/Ejercicio 2B/Ejercicio2B.html
@@ -9,7 +9,7 @@
         h2 {
             color: blue;
         }
-        
+
         div {
             border: 1px solid black;
             border-radius: 50%;
@@ -23,13 +23,20 @@
 
 <body>
     <h2>
-        Reformar el ejercicio 2 para poder crear n círculos concéntricos (número a elección) en la vista de forma dinámica, donde se disponga de un selector que me permita elegir entre los siguientes colores: rojo, verde, azul, naranja, violeta, negro. Si hago
-        un click sobre uno de los círculos, lo rellenará del color seleccionado juntamente a los círculos que tenga por detrás: eso será el caso de estar habilitado el modo "superpuesto" en una casilla de checkbox, en caso contrario, sólo pintará la figura
-        indicada. Disponer de un botón de reset, para borrar el color de todos los círculos. Si el ancho de la pantalla es inferior a 500px poner el fondo del documento web en color #eee (hacer esta operación al comienzo ó sobre un cambio en el ancho).
+        Reformar el ejercicio 2 para poder crear n círculos concéntricos (número a elección) en la vista de forma
+        dinámica, donde se disponga de un selector que me permita elegir entre los siguientes colores: rojo, verde,
+        azul, naranja, violeta, negro. Si hago
+        un click sobre uno de los círculos, lo rellenará del color seleccionado juntamente a los círculos que tenga por
+        detrás: eso será el caso de estar habilitado el modo "superpuesto" en una casilla de checkbox, en caso
+        contrario, sólo pintará la figura
+        indicada. Disponer de un botón de reset, para borrar el color de todos los círculos. Si el ancho de la pantalla
+        es inferior a 500px poner el fondo del documento web en color #eee (hacer esta operación al comienzo ó sobre un
+        cambio en el ancho).
     </h2>
     <hr>
 
     <main>
+
         <select>
             <option value="red">ROJO</option>
             <option value="green">VERDE</option>
@@ -42,10 +49,27 @@
         <input type="checkbox"> Superpuesto
         <button>Reset</button>
 
+
     </main>
 
     <script>
-        const CANT_CIRCULOS_ANIDADOS = n
+        const CANT_CIRCULOS_ANIDADOS = 3
+        var divs = []
+
+        for (let i = 0; i < CANT_CIRCULOS_ANIDADOS; i++) {
+            let div = document.createElement('div')
+            div.setAttribute("id", i)
+            divs.push(div)
+        }
+
+
+        divs[0].appendChild(divs[1])
+        divs[1].appendChild(divs[2])
+
+        document.querySelector("main").appendChild(divs[0])
+
+
+
     </script>
 
 </body>
