--- a/Ejercicio 2B/Ejercicio2B.html
+++ b/Ejercicio 2B/Ejercicio2B.html
@@ -9,7 +9,7 @@
         h2 {
             color: blue;
         }
-        
+
         div {
             border: 1px solid black;
             border-radius: 50%;
@@ -17,15 +17,24 @@
             justify-content: center;
             align-items: center;
             background-color: white;
+
+        }
+
         }
     </style>
 </head>
 
 <body>
     <h2>
-        Reformar el ejercicio 2 para poder crear n círculos concéntricos (número a elección) en la vista de forma dinámica, donde se disponga de un selector que me permita elegir entre los siguientes colores: rojo, verde, azul, naranja, violeta, negro. Si hago
-        un click sobre uno de los círculos, lo rellenará del color seleccionado juntamente a los círculos que tenga por detrás: eso será el caso de estar habilitado el modo "superpuesto" en una casilla de checkbox, en caso contrario, sólo pintará la figura
-        indicada. Disponer de un botón de reset, para borrar el color de todos los círculos. Si el ancho de la pantalla es inferior a 500px poner el fondo del documento web en color #eee (hacer esta operación al comienzo ó sobre un cambio en el ancho).
+        Reformar el ejercicio 2 para poder crear n círculos concéntricos (número a elección) en la vista de forma
+        dinámica, donde se disponga de un selector que me permita elegir entre los siguientes colores: rojo, verde,
+        azul, naranja, violeta, negro. Si hago
+        un click sobre uno de los círculos, lo rellenará del color seleccionado juntamente a los círculos que tenga por
+        detrás: eso será el caso de estar habilitado el modo "superpuesto" en una casilla de checkbox, en caso
+        contrario, sólo pintará la figura
+        indicada. Disponer de un botón de reset, para borrar el color de todos los círculos. Si el ancho de la pantalla
+        es inferior a 500px poner el fondo del documento web en color #eee (hacer esta operación al comienzo ó sobre un
+        cambio en el ancho).
     </h2>
     <hr>
 
@@ -43,27 +52,69 @@
         <input type="checkbox"> Superpuesto
         <button>Reset</button>
 
+        </div>
+        </div>
+
     </main>
 
     <script>
-        var n = 3
-        const CANT_CIRCULOS_ANIDADOS = 3
-        var divs = []
-        var dv = document.querySelector("#dv")
 
-        for (let i = 0; i <= CANT_CIRCULOS_ANIDADOS; i++) {
+        // Setea el color de fondo y carga la funcion resetPropagation()
+        window.addEventListener("load", () => {
+            resetPropagation();
+            document.body.style.backgroundColor = "#232323"
+        });
+
+        // Cambiar el color de fondo según tamaño
+        window.addEventListener("resize", () => {
+            window.outerWidth < 600 ? document.body.style.backgroundColor = "#eee" : document.body.style.backgroundColor = "#232323"
+        })
+
+        var n = parseInt(prompt("Ingresar cantidad de circulos")) //Define max circles
+        const CANT_CIRCULOS_ANIDADOS = n //Circles quantity
+        var size = 400 //Max circle size
+        const dist = size / CANT_CIRCULOS_ANIDADOS //Circle dist.
+        var check = document.querySelector("input");
+
+
+        //Create Circles
+        for (let i = 0; i < CANT_CIRCULOS_ANIDADOS; i++) {
             let div = document.createElement('div')
-            div.setAttribute("id", i)
-            divs.push(div)
+            let main = document.querySelector('main')
+            div.id = `div${i}`
+            div.style.width = `${size}px`
+            div.style.height = `${size}px`
 
-        }
-        /*     divs[0].appendChild(divs[1])
-                divs[1].appendChild(divs[2]) */
+            i > 0 ? document.querySelectorAll('div')[i - 1].appendChild(div) : (main.appendChild(div))
 
-        function crearDiv() {
-            let div = document.createElement('div')
-            return div
+            size -= (dist)
+            console.log(size)
         }
+
+        function getColor() {
+            let color = document.querySelector("select").value
+            return color
+        }
+
+        const divs = document.querySelectorAll('div')
+        divs.forEach(element => {
+            element.addEventListener("click", (e) => {
+                check.checked ? element.style.backgroundColor = getColor() : (e.stopPropagation(), element.style.backgroundColor = getColor())
+            })
+        })
+
+        function resetPropagation() {
+            document.addEventListener("click", (e) => {
+                if (e.target.innerHTML == "Reset") {
+                    check.checked = false;
+                    var div = document.querySelectorAll("div")
+                    div.forEach(index => index.style.backgroundColor = "white")
+                    document.querySelector("select").selectedIndex = 0
+                }
+            })
+        }
+
+
     </script>
 
 </body>
