--- a/Ejercicio Nº 3.html
+++ b/Ejercicio Nº 3.html
@@ -20,15 +20,11 @@
         
         input {
             width: 90%;
-            height: 20px;
+            height: 25px;
             border: 1px solid;
-            padding: 5px;
         }
         
-        input:: {
-            background: yellow;
-            color: orange;
-        }
+        form {}
     </style>
 </head>
 
@@ -45,11 +41,11 @@
         <h3>Titulo</h3>
         <form action="#">
             <label for="">Nombre</label><br />
-            <input type="text" name="" id="" /><br />
+            <input type="text" name="" id="name" /><br />
             <label for="">Edad</label><br />
-            <input type="number" name="" id="" /><br />
+            <input type="number" name="" id="age" /><br />
             <label for="">Email</label><br />
-            <input type="email" name="" id="" /><br />
+            <input type="email" name="" id="email" /><br />
         </form>
     </div>
 
